# StudentMobilityCompetition-Localization

./: .gitignore  LICENSE  LICENSES.md  PIPELINE_OVERVIEW.md  README.md
gps_imu_fusion/: CMakeLists.txt  PATH_REFACTORING_REPORT.md  package.xml
gps_imu_fusion/config/: ekf_local.yaml  fusion_params.yaml  improved_imu_calibration.json
gps_imu_fusion/docs/: echo 설명  gps_imu_fusion_analysis.md  ignore_z.md  초기 불확실성 수정 전략.md  파라미터 수정 전략.md
gps_imu_fusion/ekf_tuning_scripts/: analyze_gnss_accuracy.py  analyze_imu_bias.py  analyze_imu_noise.py  analyze_initial_covariance.py  analyze_test_results.py  ekf_param_tuner.py  generate_ekf_params.py  test_ekf_params.py
gps_imu_fusion/include/gps_imu_fusion/: ekf_fusion_node.hpp  kai_ekf_core.hpp
gps_imu_fusion/launch/: ekf_fusion.launch.py  ekf_fusion_nocheon.launch.py  fusion.launch.py  tf_static.launch.py
gps_imu_fusion/scripts/: cone_frame_transformer.py  raw_gps_path_node.py  velocity_magnitude_node.py
gps_imu_fusion/scripts/gps_vis/: README.md  fixed_gps_publisher.py  gps_offline_vis_node.py  gps_online_vis_node.py  gps_to_cartesian.py  gps_vis_node.py
gps_imu_fusion/scripts/gps_vis/data/: course1.csv  course2.csv  course3.csv  course4.csv  course5.csv  course6.csv
gps_imu_fusion/src/: ekf_fusion_main.cpp  ekf_fusion_node.cpp  kai_ekf_core.cpp
gps_imu_fusion/test/: test_lever_arm.py
gps_imu_fusion_ihw/: CMakeLists.txt  LICENSE  explanation.md  global_yaw_explanation.md  package.xml
gps_imu_fusion_ihw/config/: gps_imu_fusion.yaml  parameter_tuning_guide.md
gps_imu_fusion_ihw/include/gps_imu_fusion_ihw/: kalman_filter.hpp
gps_imu_fusion_ihw/launch/: gps_imu_fusion_launch.py
gps_imu_fusion_ihw/src/: current_speed_node.cpp  global_yaw_complementary_node.cpp  global_yaw_integrator_node.cpp  kalman_filter.cpp  sensor_fusion_node.cpp
gui/: How_To_Run.txt  package.xml  setup.cfg  setup.py
gui/gui/: gg_plotter.py
imu_analysis/imu_analysis_bag/: imu_analysis_0.db3  metadata.yaml
imu_analysis/matlab/: step01_load_imu_bag.m  step02_qc_overview.m  step03_estimate_gyro_bias.asv  step03_estimate_gyro_bias.m  step04_remove_gyro_bias.m  step05_acc_fft.m  step06_export_summary.m
imu_analysis/outputs/: 03_gyro_bias_report.txt  05_psd_summary.csv  06_summary.csv  06_summary.txt  acc_psd.mat  gyro_bias.mat  imu_acc_lpf.mat  imu_bias_corrected.mat  imu_raw.mat
imu_preproc_ihw/: CMakeLists.txt  PIPELINE_OVERVIEW.md  package.xml
imu_preproc_ihw/config/: imu_preproc.yaml
imu_preproc_ihw/include/: imu_preproc.hpp  lpf_1st_order.hpp
imu_preproc_ihw/launch/: imu_preproc_launch.py
imu_preproc_ihw/src/: imu_preproc.cpp  imu_preproc_node.cpp
imu_preprocess/: CMakeLists.txt  LICENSE  package.xml
imu_preprocess/config/: default.yaml  imu_bias.yaml
imu_preprocess/launch/: imu_preprocess.launch.py
imu_preprocess/src/: imu_preprocess_node.cpp
