<?xml version="1.0"?>
<package format="3">
  <name>gps_imu_fusion</name>
  <version>0.0.0</version>
  <description>Launch and config for IMU–GPS fusion with robot_localization</description>

  <maintainer email="ihw@example.com">ihw</maintainer>
  <license>Apache-2.0</license>

  <!-- 런치에서 호출하는 실행 패키지 의존성 -->
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>imu_preprocess</exec_depend>
  <exec_depend>gps_global_planner</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
