<?xml version="1.0"?>
<package format="3">
  <name>imu_preproc_ihw</name>
  <version>0.0.1</version>
  <description>IMU preprocessing (bias removal, LPF, GPS-based initial yaw) for gps_imu_fusion_ihw EKF.</description>
  <maintainer email="imhyeonwoo21@gmail.com">ihw</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>Eigen3</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
